Uploading images to Cloudinary and implementing an API to store categories in the database
