# routes/category.js
@@ -1,8 +1,12 @@
+const express = require("express");
+const router = express.Router();
+const categoryController = require("../controllers/categoryController");
 
-const express = require("express")
-const router = express.Router()
-const categoryController = require("../controllers/categoryController")
 
-router.get("/" , categoryController.getCategories)
 
-module.exports = router
+
+router.get("/", categoryController.getCategories);
+
+router.post("/create",categoryController.createCategory);
+
+module.exports = router;
