# swagger.json
@@ -23,6 +23,45 @@
           }
         }
       }
+    },
+    "/category/create": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "images": {
+                  "type": "array",
+                  "items": {
+                    "type": "string",
+                    "format": "url",
+                    "example": "https://example.com/image.jpg"
+                  },
+                  "description": "Array of image URLs"
+                },
+                "name": {
+                  "example": "string"
+                },
+                "color": {
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
